Fix webkit scrollbar design !

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -189,6 +189,22 @@ input[type="number"]::-webkit-inner-spin-button {
                                   supported by Chrome and Opera */
 }
 
+::-webkit-scrollbar
+{
+  width: 12px;  /* for vertical scrollbars */
+  height: 16px; /* for horizontal scrollbars */
+}
+
+::-webkit-scrollbar-track
+{
+  background: rgba(255, 255, 255, 0.3);
+}
+
+::-webkit-scrollbar-thumb
+{
+  background: rgba(255, 255, 255, 0.7);
+}
+
 .animation {
   position: fixed;
   width: 10vw;
